# coding-bridge-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CONFIGURATION.md
docs/Task/: README.md
docs/Task/Archive/2026-06/: DISABLE_PROXY_BY_DEFAULT_PLAN.md  FIX_EXTERNAL_REVIEW_RISKS_PLAN.md  OPENCODE_GO_PROVIDER_PLAN.md  QIANFAN_CODING_PROVIDER_PLAN.md  SECURITY_FIX_ARK_KEY_LEAK_PLAN.md
docs/Task/Archive/2026-07/: DEEPSEEK_PROVIDER_PLAN.md  FIX_PROJECT_HEALTH_PLAN.md  SENSENOVA_PROVIDER_PLAN.md
src/astronmcp/: server.py
src/coding_bridge_mcp/: __init__.py  api_client.py  cli.py  config.py  logging_config.py  providers.py  server.py  spark_client.py
tests/: test_config.py  test_deepseek_contracts.py  test_deepseek_live.py  test_no_proxy.py  test_opencode_contracts.py  test_opencode_live.py  test_proxy_modes.py  test_qianfan_contracts.py  test_sensenova_contracts.py  test_sensenova_live.py  test_session.py  test_token_stats.py  test_tools_e2e.py  test_volcengine_live.py
