[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "coding-bridge-mcp"
version = "0.1.0"
description = "Multi-provider Coding Plan MCP server for code/plan review."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "mcp[cli]>=1.20.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0",
]
authors = [
    { name = "coding-bridge-mcp" },
]
license = { text = "MIT" }
keywords = ["mcp", "coding-plan", "iflytek", "volcengine", "spark", "code-review", "plan-review"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
coding-bridge-mcp = "coding_bridge_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/coding_bridge_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/coding_bridge_mcp", "README.md", "LICENSE"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
]
