[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "coding-bridge-mcp"
version = "0.1.0"
description = "Multi-provider Coding Plan MCP server for code/plan review."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "mcp[cli]>=1.20.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0",
]
authors = [
    { name = "coding-bridge-mcp" },
]
license = { text = "MIT" }
keywords = ["mcp", "coding-plan", "iflytek", "volcengine", "spark", "code-review", "plan-review"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
# External review MCP (coding-bridge / kimi) proxies through SOCKS.
# This project itself does not open SOCKS connections. Install via
# `uv sync --extra review` to provision socksio for the review transport.
review = [
    "httpx[socks]>=0.27.0",
]

[project.scripts]
coding-bridge-mcp = "coding_bridge_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/coding_bridge_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/coding_bridge_mcp", "README.md", "LICENSE"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
# Live provider smoke tests hit real APIs (see tests/test_volcengine_live.py)
# and are skipped by default. They are excluded from the default test set
# via `addopts` so they never run alongside the hermetic suite, and must be
# invoked explicitly with: pytest -m volcengine_live tests/test_volcengine_live.py
markers = [
    "volcengine_live: live smoke test against Volcano Engine Ark API",
    "opencode_live: live smoke test against the OpenCode Go API",
    "deepseek_live: live smoke test against the DeepSeek official API",
    "sensenova_live: live smoke test against the SenseNova Token Plan API",
]
addopts = "-m 'not volcengine_live and not opencode_live and not deepseek_live and not sensenova_live'"

[tool.ruff]
# Whole-repo lint, matching the historical `ruff check src tests` acceptance gate.
# Default rule set (pyflakes + pycodestyle E/F) is intentionally kept tight.

[tool.ruff.lint.per-file-ignores]
# server.py calls load_dotenv(override=False) at import time BEFORE importing
# config/api_client/logging_config, because those modules read environment
# variables at import. Reordering would break env-var loading — a functional
# regression — so the resulting E402 is suppressed at file level.
"src/coding_bridge_mcp/server.py" = ["E402"]
